tests/snapshots/run_wpt_conformance__coreml_prelu_float32_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float32 1D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'x' has incorrect type for operator 'ios17.prelu'. Expected { tensor<fp32, [?, ?, ...]>, tensor<fp16, [?, ?, ...]> }; got tensor<fp32, [24]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f32[24];
  }

  consts {
    operand_1: f32[24] @bytes([79, 125, 21, 65, 43, 101, 143, 62, 41, 191, 147, 192, 42, 101, 143, 63, 251, 123, 183, 191, 9, 22, 74, 192, 78, 71, 201, 192, 96, 88, 160, 192, 62, 197, 220, 192, 105, 164, 100, 64, 59, 149, 219, 64, 118, 19, 251, 191, 155, 169, 146, 64, 183, 132, 42, 64, 88, 22, 19, 65, 13, 224, 24, 193, 204, 41, 176, 192, 154, 34, 25, 192, 156, 65, 101, 64, 53, 162, 20, 192, 243, 166, 253, 191, 13, 253, 132, 64, 189, 86, 230, 191, 205, 187, 20, 65]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
