tests/snapshots/run_wpt_conformance__coreml_prelu_float32_broadcast_4D_x_3D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float32 broadcast 4D x 3D slope, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { tensor<fp32, [?]>, tensor<fp16, [?]> }; got tensor<fp32, [1, 1, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f32[2, 2, 2, 3];
  }

  consts {
    operand_1: f32[1, 1, 3] @bytes([148, 93, 162, 64, 18, 40, 246, 62, 158, 239, 226, 192]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
